fixing the responsiveness on mobile pt3...

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,7 @@ hr {
 	padding: 0.5rem;
 	border: 0.2em solid #3399F3;
 	background-color: #dcf2f0;
+	width: 100%;
 }
 
 
